Changelog
=========

1.10.1 (unreleased)
-------------------

- Nothing changed yet.


1.10.0 (2018-04-04)
-------------------

- VM image charging: use LZ4 compressed images.


1.9.13 (2017-08-01)
-------------------

- Update hostmaster address (#16370).
- Stabilize DNS record sort order (#16370).


1.9.12 (2017-06-12)
-------------------

- Also configure output RG firewall rules to relieve conntrack table overload.


1.9.11 (2017-05-24)
-------------------

- Make vmimage download code more robust if encountering a 404. Hydra doesn't
  necessarily always provide an image and we're fine with that. We just keep
  using an older version that is still good (#26700).


1.9.10 (2017-03-09)
-------------------

- Fix VM Ceph image deletion. This was forgotten to be updated when we moved
  from RG-specific pools to pools that reflect the underlying storage
  technology. The new code hunts down all images of a VM, potentially in all
  pools.


1.9.9 (2016-12-21)
------------------

- Improve resource usage of VM config scrubbing: we did not limit the number
  of subprocess of "fc-qemu ensure" that we were spawning.

  We only limited the rate of spawns per second. At some points we saw VM
  servers to get overloaded by a) using multiprocessing.Process that creates
  superfluous forks and b) when the host was busy the actual fc.qemu
  subprocesses where spawned faster than the host could work on them. That lead
  to a very "interesting" behaviour of memory usage where suddenly a lot of
  processes were pushed into swap.

  We now a) do not create superfluous forks and b) limit to at most 5 fc.qemu
  instances at a time.


1.9.8 (2016-12-15)
------------------

- Fix locking error in VM charging (#25145).


1.9.7 (2016-11-17)
------------------

- Bugfix: log stdout/stderr of prepare/finish scripts.


1.9.6 (2016-10-31)
------------------

- Read global backy.conf parameters from `/etc/backy.global.conf`. Fall back to
  built-in defaults if this file does not exist.

